complete mint, upload art files, metadatas

--- a/.env
+++ b/.env
@@ -1,8 +1,18 @@
-CONFIG_CURRENT_USE_PINATA_ACCOUNT=0
+CONFIG_CURRENT_USE_PINATA_ACCOUNT=3
 CONFIG_UPLOAD_STATUS_PATH="./config/upload_status.json"
 CONFIG_PINATA_API_KEYS="./config/pinata_api_keys.json"
 
 CONFIG_DIR_ARTS="./datas/art/"
 CONFIG_DIR_METADATAS="./datas/metadata/"
 
-CONFIG_MAX_UPLOAD_COUNT=1000
+CONFIG_MAX_UPLOAD_COUNT=10000
+
+MNEMONIC="swear scrap anchor snap venue wheel scene endless note blind happy kit"
+ALCHEMY_KEY="awo89MDtufi4z8Ug9_XkQplYTjV93AWH"
+OWNER_ADDRESS="0x136d0a7ac8f247d8385da1e3381efab348d0609a"
+NFT_CONTRACT_ADDRESS="0x97630D8DFAA4E98828F8082358fc8c2B20933cc5"
+NETWORK="rinkeby"
+
+CONFIG_MAX_METADATA_UPLOAD_COUNT=5
+CONFIG_METADATA_PINATA_ACCOUNT=4
+CONFIG_UPLOAD_METADATA_STATUS_PATH="./config/upload_metadata_status.json"
