--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@pinata/sdk": "^1.1.23",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -14,16 +15,20 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "recursive-fs": "^2.1.0",
-    "web-vitals": "^1.0.1"
+    "truffle-hdwallet-provider": "^1.0.17",
+    "web-vitals": "^1.0.1",
+    "web3": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-
     "cmd_optimize_upload_status": "node scripts/optimize_upload_status.js",
-    "cmd_upload_arts": "node scripts/upload_arts.js"
+    "cmd_upload_arts": "node scripts/upload_arts.js",
+    "cmd_optimize_upload_metadata_status": "node scripts/optimize_upload_metadata_status.js",
+    "cmd_upload_metadata": "node scripts/upload_metadata.js",
+    "mint_nfts": "node scripts/mint_nfts.js"
   },
   "eslintConfig": {
     "extends": [
