start minting page

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Minting NFT",
+  "name": "Sloth Royalty Club NFTs",
   "icons": [
     {
       "src": "favicon.ico",
