--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "base-path-converter": "^1.0.2",
+    "bootstrap": "^5.1.3",
     "dotenv": "^10.0.0",
     "nodemon": "^2.0.15",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "recursive-fs": "^2.1.0",
