--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
+    "react-multi-carousel": "^2.6.5",
     "react-scripts": "4.0.3",
     "recursive-fs": "^2.1.0",
     "truffle-hdwallet-provider": "^1.0.17",
