--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "axios": "^0.24.0",
     "base-path-converter": "^1.0.2",
     "bootstrap": "^5.1.3",
+    "concurrently": "^6.4.0",
     "dotenv": "^10.0.0",
     "nodemon": "^2.0.15",
+    "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
